# extractory

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.codex/skills/extractory-commit-changes/: SKILL.md
.codex/skills/extractory-commit-changes/agents/: openai.yaml
.github/workflows/: ci.yml
docs/: api.rst  cli.rst  conf.py  development.rst  graph.rst  index.rst  normalization.rst  quickstart.rst  selective_fetching.rst  tools.rst
examples/: connected_jira_issue_graph.py  correlate_jira_gerrit.py  gerrit_query.py  gerrit_related_changes.py  jira_search.py  release_readiness.py
scripts/: inspect_response.py
src/extractory/: __init__.py  _http.py  auth.py  cli.py  config.py  correlation.py  exceptions.py  export.py  pagination.py  records.py  requirements.py  selection.py
src/extractory/gerrit/: __init__.py  client.py  extract.py  models.py  options.py  records.py  resources.py
src/extractory/graph/: __init__.py  export.py  models.py  traversal.py
src/extractory/jira/: __init__.py  client.py  extract.py  fields.py  models.py  records.py  resources.py
src/extractory/normalization/: __init__.py  builtins.py  context.py  gerrit.py  jira.py  registry.py  result.py
src/extractory/tools/: __init__.py  cross_system.py  gerrit_file.py  gerrit_graph.py  gerrit_review.py  gerrit_submission.py  jira_graph.py  jira_impact.py  jira_release.py  summaries.py
tests/: conftest.py  test_auth.py  test_cli.py  test_correlation.py  test_export.py  test_selection.py
tests/gerrit/: test_client.py  test_xssi.py
tests/graph/: test_models.py
tests/jira/: test_client.py
tests/normalization/: test_gerrit_normalizers.py  test_jira_normalizers.py
